feat: Disabling default backup configuration

--- a/stackgres-k8s/e2e/spec/restore.backup.values.yaml
+++ b/stackgres-k8s/e2e/spec/restore.backup.values.yaml
@@ -25,6 +25,8 @@ cluster:
   pods:
     persistentVolume:
       size: 128Mi
+  configurations:
+    sgBackupConfig: backupconf
   prometheusAutobind: false
 nonProductionOptions:
   createMinio: false
