--- a/stackgres-k8s/e2e/spec/operator-cluster-api.values.yaml
+++ b/stackgres-k8s/e2e/spec/operator-cluster-api.values.yaml
@@ -3,6 +3,7 @@ configurations:
     postgresql.conf:
       shared_buffers: '32MB'
   backupconfig:
+    create: true
     # Avoid backups before waiting for pods (since backup pods could biase the wait)
     baseBackups:
       cronSchedule: '0 5 31 2 *'
@@ -10,6 +11,8 @@ cluster:
   pods:
     persistentVolume:
       size: 128Mi
+  configurations:
+    sgBackupConfig: backupconf
   prometheusAutobind: false
 minio:
   readinessProbe:
