e2e: test cluster stats REST API is actually returning stats

--- a/stackgres-k8s/e2e/spec/operator-cluster-api.values.yaml
+++ b/stackgres-k8s/e2e/spec/operator-cluster-api.values.yaml
@@ -11,3 +11,6 @@ cluster:
     persistentVolume:
       size: 128Mi
   prometheusAutobind: false
+minio:
+  readinessProbe:
+    initialDelaySeconds: 5
