e2e: improved minio startup time

--- a/stackgres-k8s/e2e/spec/backup.values.yaml
+++ b/stackgres-k8s/e2e/spec/backup.values.yaml
@@ -18,5 +18,7 @@ cluster:
 minio:
   persistence:
     size: 2Gi
+  readinessProbe:
+    initialDelaySeconds: 5
 nonProductionOptions:
   createMinio: true
