--- a/stackgres-k8s/e2e/spec/backupconf-removal.values.yaml
+++ b/stackgres-k8s/e2e/spec/backupconf-removal.values.yaml
@@ -17,6 +17,7 @@ cluster:
 minio:
   persistence:
     size: 128Mi
-
+  readinessProbe:
+    initialDelaySeconds: 5
 nonProductionOptions:
   createMinio: true
