--- a/stackgres-k8s/e2e/spec/custom-annotations-values.yaml
+++ b/stackgres-k8s/e2e/spec/custom-annotations-values.yaml
@@ -16,3 +16,6 @@ cluster:
   prometheusAutobind: false
 nonProductionOptions:
   disableClusterPodAntiAffinity: true
+minio:
+  readinessProbe:
+    initialDelaySeconds: 5
