--- a/stackgres-k8s/e2e/spec/operator-backup-api.values.yaml
+++ b/stackgres-k8s/e2e/spec/operator-backup-api.values.yaml
@@ -16,3 +16,6 @@ cluster:
   prometheusAutobind: false
 nonProductionOptions:
   createMinio: true
+minio:
+  readinessProbe:
+    initialDelaySeconds: 5
