e2e: fix missing backup config name in env specific tests

--- a/stackgres-k8s/e2e/spec/eks/backup-with-s3-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/eks/backup-with-s3-storage.values.yaml
@@ -22,6 +22,8 @@ cluster:
   pods:
     persistentVolume:
       size: 128Mi
+  configurations:
+    sgBackupConfig: backupconf
   prometheusAutobind: false
 nonProductionOptions:
   createMinio: false
