--- a/stackgres-k8s/e2e/spec/aks/backup-with-aks-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/aks/backup-with-aks-storage.values.yaml
@@ -23,6 +23,8 @@ cluster:
   pods:
     persistentVolume:
       size: 128Mi
+  configurations:
+    sgBackupConfig: backupconf
   prometheusAutobind: false
 nonProductionOptions:
   createMinio: false
