--- a/stackgres-k8s/e2e/spec/gke/backup-with-gce-storage-wi.values.yaml
+++ b/stackgres-k8s/e2e/spec/gke/backup-with-gce-storage-wi.values.yaml
@@ -16,6 +16,8 @@ cluster:
   pods:
     persistentVolume:
       size: 128Mi
+  configurations:
+    sgBackupConfig: backupconf
   prometheusAutobind: false
 nonProductionOptions:
   createMinio: false
