fix: styled tables tooltips

--- a/stackgres-k8s/src/admin-ui/package.json
+++ b/stackgres-k8s/src/admin-ui/package.json
@@ -19,6 +19,7 @@
     "url": "https://gitlab.com/ongresinc/stackgres.git"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0"
