--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
@@ -328,6 +328,12 @@ spec:
                           description: |
                             The credentials to access GCS for writing and reading.
                           properties:
+                            fetchCredentialsFromMetadataService:
+                              type: boolean
+                              description: |
+                                If true, the credentials will be fetched from the GCE/GKE metadata service and the credentials from `secretKeySelectors` field will not be used.
+                                
+                                This is useful when running StackGres inside a GKE cluster using [Workload Identity](https://cloud.google.com/kubernetes-engine/docs/how-to/workload-identity).
                             secretKeySelectors:
                               type: object
                               description: |
@@ -348,7 +354,7 @@ spec:
                                         Name of the referent.  [More information](https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names).
                                   required: ["key", "name"]
                               required: ["serviceAccountJSON"]
-                          required: ["secretKeySelectors"]
+                          required: []
                       required: ["bucket", "gcpCredentials"]
                     azureBlob:
                       type: object
