fix: deployment from private repository and gke postgres version test

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-service-account.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-service-account.yaml
@@ -9,4 +9,8 @@ metadata:
     meta.helm.sh/release-namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/managed-by: Helm
+{{- if .Values.serviceAccount.repoCredentials }}
+imagePullSecrets:
+- name: {{ .Values.serviceAccount.repoCredentials }}
+{{- end }}
 {{- end }}
