--- a/stackgres-k8s/src/admin-ui/public/js/components/forms/help/crd-SGBackupConfig-EN.json
+++ b/stackgres-k8s/src/admin-ui/public/js/components/forms/help/crd-SGBackupConfig-EN.json
@@ -257,6 +257,10 @@
                 "type": "object",
                 "description": "The credentials to access GCS for writing and reading.\n",
                 "properties": {
+                  "fetchCredentialsFromMetadataService": {
+                    "type": "boolean",
+                    "description": "If true, the credentials will be fetched from the GCE/GKE metadata service and the field `secretKeySelectors` have to be set to null or omitted.\n\nThis is useful when running StackGres inside a GKE cluster using [Workload Identity](https://cloud.google.com/kubernetes-engine/docs/how-to/workload-identity).\n"
+                  },
                   "secretKeySelectors": {
                     "type": "object",
                     "description": "A Kubernetes [SecretKeySelector](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#secretkeyselector-v1-core) to reference the Secrets that contain the information about the Service Account to access GCS.\n",
@@ -285,9 +289,7 @@
                     ]
                   }
                 },
-                "required": [
-                  "secretKeySelectors"
-                ]
+                "required": []
               }
             },
             "required": [
