refactor: Adapt code and script for GraalVM 20.1-java11

--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -3,6 +3,8 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 #
 
+quarkus.banner.path=banner.txt
+
 # Quarkus Native Image
 quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.yaml,\
