Working on #525 and #391
  - Fixing helm to v3
  - Fixing yaml generation (still broken when executed standalone)
  - Fixed redirections and working on filtering helm install output
  - Fixed Cluster generation
  - Added tests to demo.

--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -16,7 +16,8 @@ adminui:
     tag: "development"
     pullPolicy: "IfNotPresent"
 service:
-  type: ClusterIP
+  name: stackgres-restapi-endpoint
+  type: LoadBalancer
   #nodePort:
 
 serviceAccount:
