--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -15,10 +15,23 @@ adminui:
     name: "stackgres/admin-ui"
     tag: "development"
     pullPolicy: "IfNotPresent"
-service:
-  name: stackgres-restapi-endpoint
-  type: LoadBalancer
-  #nodePort:
+  service:
+    # Set to LoadBalancer to expose admin UI with a load balancer
+    # Set to NodePort to expose admin UI from kubernetes nodes
+    type: ClusterIP
+    # LoadBalancer will get created with the IP specified in this field.
+    # This feature depends on whether the underlying cloud-provider supports
+    # specifying the loadBalancerIP when a load balancer is created. This field
+    # will be ignored if the cloud-provider does not support the feature.
+    # loadBalancerIP:
+    # If specified and supported by the platform, this will restrict traffic
+    # through the cloud-provider load-balancer will be restricted to the
+    # specified client IPs. This field will be ignored if the cloud-provider does
+    # not support the feature.
+    # More info: https://kubernetes.io/docs/tasks/access-application-cluster/configure-cloud-provider-firewall/
+    # loadBalancerSourceRanges:
+    # The port used to expose the service on kubernetes nodes
+    # nodePort:
 
 serviceAccount:
   create: true
@@ -36,22 +49,6 @@ cert:
   # crt:
   # jwtRsaKey:
   # jwtRsaPub:
-
-service:
-  loadBalancer:
-    # Set to true to expose operator with a load balancer
-    enabled: false
-    # LoadBalancer will get created with the IP specified in this field.
-    # This feature depends on whether the underlying cloud-provider supports
-    # specifying the loadBalancerIP when a load balancer is created. This field
-    # will be ignored if the cloud-provider does not support the feature.
-    # loadBalancerIP:
-    # If specified and supported by the platform, this will restrict traffic
-    # through the cloud-provider load-balancer will be restricted to the
-    # specified client IPs. This field will be ignored if the cloud-provider does
-    # not support the feature.
-    # More info: https://kubernetes.io/docs/tasks/access-application-cluster/configure-cloud-provider-firewall/
-    # loadBalancerSourceRanges:
 
 # Custom credentials for the operator's admin user
 authentication:
