--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,6 +94,11 @@ build helm packages:
   stage: build
   script:
   - sh -x stackgres-k8s/install/helm/build-helm-packages.sh
+  - |
+    if [[ ! -z "$CI_COMMIT_TAG" && ! "$CI_COMMIT_TAG" =~ ^latest-.*$ ]]
+    then
+      cp -a "target/public/downloads/stackgres-k8s/stackgres"/* target/public/downloads/stackgres-k8s/stackgres/latest
+    fi
   - find stackgres-k8s/install/helm/target/public | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
   artifacts:
     expire_in: 1 week
@@ -106,6 +111,11 @@ build helm templates:
   stage: build
   script:
   - sh -x stackgres-k8s/install/helm/build-helm-templates.sh
+  - |
+    if [[ ! -z "$CI_COMMIT_TAG" && ! "$CI_COMMIT_TAG" =~ ^latest-.*$ ]]
+    then
+      cp -a "target/public/downloads/stackgres-k8s/stackgres"/* target/public/downloads/stackgres-k8s/stackgres/latest
+    fi
   - find stackgres-k8s/install/helm/target/public | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
   artifacts:
     expire_in: 1 week
@@ -228,6 +238,7 @@ build jvm image:
   only:
     variables:
       - $SKIP_E2E != "true"
+      - $DO_DEPLOY
 
 build ui image:
   image: docker.io/ongres/builder:latest
@@ -242,6 +253,10 @@ build ui image:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
     - 'export ADMIN_IMAGE_NAME="stackgres/admin-ui:$IMAGE_TAG"'
     - ( cd stackgres-k8s/src; sh admin-ui/buildah/build.sh )
+  only:
+    variables:
+      - $SKIP_E2E != "true"
+      - $DO_DEPLOY
 
 build test images:
   stage: pre test
@@ -472,6 +487,21 @@ deploy adminui image:
     - 'buildah push --format=docker --authfile $REGISTRY_AUTH_FILE $ADMINUI_IMAGE_NAME "docker://docker.io/$ADMINUI_IMAGE_UPLOAD_NAME"'
   only:
     variables:
-      - $CI_COMMIT_REF_NAME == "development"
-      - $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
+      - $SKIP_DEPLOY != "true" && $CI_COMMIT_REF_NAME == "development"
+      - $SKIP_DEPLOY != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
+      - $DO_DEPLOY
+
+deploy helm packages and templates:
+  image: mikesir87/aws-cli:latest
+  stage: deploy
+  dependencies:
+    - build helm packages
+    - build helm templates
+  script:
+    - aws s3 sync ./stackgres-k8s/install/helm/target/public/ s3://$S3_BUCKET_NAME/
+    - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths '/*'
+  only:
+    variables:
+      - $SKIP_DEPLOY != "true" && $CI_COMMIT_REF_NAME == "development"
+      - $SKIP_DEPLOY != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
       - $DO_DEPLOY
