--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -24,8 +24,8 @@ cluster:
     disablePostgresUtil: false
     disableMetricsExporter: false
   configurations:
-    sgPostgresConfig: postgresconf
-    sgPoolingConfig: pgbouncerconf
+    sgPostgresConfig: postgresconfig
+    sgPoolingConfig: poolingconfig
   distributedLogs:
     sgDistributedLogs: distributedlogs
   #restore:
@@ -82,7 +82,7 @@ configurations:
       pgbouncer.ini:
         pool_mode: transaction
         max_client_conn: '200'
-        default_pool_size: '200'
+        default_pool_size: '50'
   backupconfig:
     create: false
     baseBackups:
